Modification: fixed spacing of icon and name.

--- a/Styles/homeStyles.css
+++ b/Styles/homeStyles.css
@@ -8,16 +8,18 @@ nav {
 
 #navSection {
     display: flex;
+    flex: 1;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    padding: 10px;
 }
 
 #icon_and_name {
     display: flex;
+    flex: 1;
     align-items: center;
-    justify-content:space-around;
+    justify-content:start;
+    gap: 20px;
     flex-direction: row;
 }
 
@@ -58,7 +60,7 @@ nav {
 
 .link {
     margin: 10px;
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 a:link {
@@ -107,7 +109,8 @@ h2{
     margin-top: 50px;
     width: 50vw;
     color: white;
-    text-align: center;
+    text-align: start;
+    
 }
 
 /* *{
